--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="/query/query.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@300;400;500;700;800;900&family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/query/query.css">
     <title>SHOE-TY</title>
 </head>
-<body>
+<body id="body">
     <nav class="nav-container">
         <div class="logo">
             <h1>SHOE-TY</h1>
@@ -48,11 +48,17 @@
                     <p>Good shoes takes you to good places. I make shoe contact before eye contact.</p>
                 <a href="">Read more</a>
                 </div>
-                <img src="img/product3.jpg" alt="">
-                <h3>Last chance</h3>
-                <h2>Shop the sale collection now!</h2>
-                <p>Choose your stuff with our 50% off today</p>
-                <a href="">Shop now</a>
+                <div id="sub-hero">
+                    <div class="img-container">
+                        <img src="img/product3.jpg" alt="">
+                    </div>
+                    <div class="text-container">
+                        <h3>Last chance</h3>
+                        <h2>Shop the sale collection now!</h2>
+                        <p>Choose your stuff with our 50% off today</p>
+                        <a href="">Shop now</a>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
