--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="logo">
                     <h1>SHOE-TY</h1>
                     <p>Good shoes takes you to good places. I make shoe contact before eye contact.</p>
-                <a href="">Read more</a>
+                    <a href="">Read more</a>
                 </div>
                 <div id="sub-hero">
                     <div class="img-container">
@@ -61,6 +61,35 @@
                 </div>
             </div>
         </div>
+        <section class="section-one">
+            <div class="box box-one">
+                <div class="img-container">
+                    <img src="img/packaging.jpg" alt="">
+                </div>
+                <div class="text-container">
+                    <p>Modular Packaging <br> Unboxing like never</p>
+                    <a href="">Shop now</a>
+                </div>
+            </div>
+            <div class="box box-two">
+                <div class="img-container">
+                    <img src="img/who.jpg" alt="">
+                </div>
+                <div class="text-container">
+                    <p>Who we are <br> Our journey explained</p>
+                    <a href="">Shop now</a>
+                </div>
+            </div>
+            <div class="box box-three">
+                <div class="img-container">
+                    <img src="img/made.jpg" alt="">
+                </div>
+                <div class="text-container">
+                    <p>Materials made <br> Product can break a leg</p>
+                    <a href="">Shop now</a>
+                </div>
+            </div>
+        </section>
     </main>
 
     <script src="https://kit.fontawesome.com/a42e979eb4.js" crossorigin="anonymous"></script>
