section-one fully responsive

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>SHOE-TY</title>
 </head>
 <body id="body">
+    <div class="overlayer"></div>
     <nav class="nav-container">
         <div class="logo">
             <h1>SHOE-TY</h1>
@@ -61,6 +62,7 @@
                 </div>
             </div>
         </div>
+
         <section class="section-one">
             <div class="box box-one">
                 <div class="img-container">
@@ -87,6 +89,46 @@
                 <div class="text-container">
                     <p>Materials made <br> Product can break a leg</p>
                     <a href="">Shop now</a>
+                </div>
+            </div>
+        </section>
+
+        <section class="section-two">
+            <h2>Our featured products</h2>
+            <div class="product-container">
+                <div class="box box-one">
+                    <div class="img-container" id="img-changer1">
+                        <img src="img/product2.png" alt="" id="img-change">
+                    </div>
+                    <div class="text-container">
+                        <h3>Nike Air Max</h3>
+                        <p>White and asorted color edition</p>
+                        <p>P1299.00</p>
+                    </div>
+                </div>
+                <div class="box box-two">
+                    <div class="img-container" id="img-changer2">
+                        <img src="img/p10.png" alt="" id="img-change">
+                        <img src="img/p10.jpg" alt="" id="img-changed">
+                    </div>
+                    <div class="text-container">
+                        <h3>Addidas Fashion Show</h3>
+                        <p>Killer gray, orange, and white</p>
+                        <p>P1299.00</p>
+                    </div>
+                </div>
+                <div class="box box-three">
+                    <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes/id" target="_blank">
+                        <div class="img-container" id="img-changer3">
+                            <img src="img/p8.png" alt="" id="img-change">
+                            <img src="img/arrow.png" alt="" id="arrow">
+                        </div>
+                    </a>
+                    <div class="text-container">
+                        <h3>Nike Bounce Back</h3>
+                        <p>Ocean black edition</p>
+                        <p>P1299.00</p>
+                    </div>
                 </div>
             </div>
         </section>
