done section-two

--- a/index.html
+++ b/index.html
@@ -97,9 +97,12 @@
             <h2>Our featured products</h2>
             <div class="product-container">
                 <div class="box box-one">
-                    <div class="img-container" id="img-changer1">
-                        <img src="img/product2.png" alt="" id="img-change">
-                    </div>
+                    <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes/id" target="_blank">
+                        <div class="img-container" id="img-changer3">
+                            <img src="img/product2.png" alt="" id="img-change">
+                            <img src="img/arrow.png" alt="" id="arrow">
+                        </div>
+                    </a>
                     <div class="text-container">
                         <h3>Nike Air Max</h3>
                         <p>White and asorted color edition</p>
@@ -107,10 +110,12 @@
                     </div>
                 </div>
                 <div class="box box-two">
-                    <div class="img-container" id="img-changer2">
-                        <img src="img/p10.png" alt="" id="img-change">
-                        <img src="img/p10.jpg" alt="" id="img-changed">
-                    </div>
+                    <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes/id" target="_blank">
+                        <div class="img-container" id="img-changer3">
+                            <img src="img/p10.png" alt="" id="img-change">
+                            <img src="img/arrow.png" alt="" id="arrow">
+                        </div>
+                    </a>
                     <div class="text-container">
                         <h3>Addidas Fashion Show</h3>
                         <p>Killer gray, orange, and white</p>
@@ -121,6 +126,45 @@
                     <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes/id" target="_blank">
                         <div class="img-container" id="img-changer3">
                             <img src="img/p8.png" alt="" id="img-change">
+                            <img src="img/arrow.png" alt="" id="arrow">
+                        </div>
+                    </a>
+                    <div class="text-container">
+                        <h3>Nike Bounce Back</h3>
+                        <p>Ocean black edition</p>
+                        <p>P1299.00</p>
+                    </div>
+                </div>
+                <div class="box box-four">
+                    <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes/id" target="_blank">
+                        <div class="img-container" id="img-changer3">
+                            <img src="img/p9.png" alt="" id="img-change">
+                            <img src="img/arrow.png" alt="" id="arrow">
+                        </div>
+                    </a>
+                    <div class="text-container">
+                        <h3>Nike Bounce Back</h3>
+                        <p>Ocean black edition</p>
+                        <p>P1299.00</p>
+                    </div>
+                </div>
+                <div class="box box-five">
+                    <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes/id" target="_blank">
+                        <div class="img-container" id="img-changer3">
+                            <img src="img/p14.png" alt="" id="img-change">
+                            <img src="img/arrow.png" alt="" id="arrow">
+                        </div>
+                    </a>
+                    <div class="text-container">
+                        <h3>Nike Bounce Back</h3>
+                        <p>Ocean black edition</p>
+                        <p>P1299.00</p>
+                    </div>
+                </div>
+                <div class="box box-six">
+                    <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes/id" target="_blank">
+                        <div class="img-container" id="img-changer3">
+                            <img src="img/p11.png" alt="" id="img-change">
                             <img src="img/arrow.png" alt="" id="arrow">
                         </div>
                     </a>
