--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#13875e">
+    <!-- <meta name="theme-color" media="(prefers-color-scheme: light)" content="white"> -->
+    <link rel="icon" type="image/png" href="img/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@300;400;500;700;800;900&family=Poppins&display=swap" rel="stylesheet">
@@ -97,7 +100,7 @@
             <h2>Our featured products</h2>
             <div class="product-container">
                 <div class="box box-one">
-                    <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes/id" target="_blank">
+                    <a href="https://shopee.ph/Original-women's-shoes-sneakers-women's-summer-design-thick-sole-(one-size-smaller)-i.403556620.9080428976?sp_atk=fe03619c-ad12-4080-a1c6-624610ec386a" target="_blank">
                         <div class="img-container" id="img-changer3">
                             <img src="img/product2.png" alt="" id="img-change">
                             <img src="img/arrow.png" alt="" id="arrow">
@@ -110,7 +113,7 @@
                     </div>
                 </div>
                 <div class="box box-two">
-                    <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes/id" target="_blank">
+                    <a href="https://shopee.ph/Original-women's-shoes-sneakers-women's-summer-design-thick-sole-(one-size-smaller)-i.403556620.9080428976?sp_atk=fe03619c-ad12-4080-a1c6-624610ec386a" target="_blank">
                         <div class="img-container" id="img-changer3">
                             <img src="img/p10.png" alt="" id="img-change">
                             <img src="img/arrow.png" alt="" id="arrow">
@@ -123,7 +126,7 @@
                     </div>
                 </div>
                 <div class="box box-three">
-                    <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes/id" target="_blank">
+                    <a href="https://shopee.ph/NEW-SNEAKERS-FOR-MEN-WITH-GOOD-QUALITY-i.52678960.9236467436?sp_atk=84b238ad-69d0-4a5c-b877-dc73e5d84d9a" target="_blank">
                         <div class="img-container" id="img-changer3">
                             <img src="img/p8.png" alt="" id="img-change">
                             <img src="img/arrow.png" alt="" id="arrow">
@@ -136,7 +139,7 @@
                     </div>
                 </div>
                 <div class="box box-four">
-                    <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes/id" target="_blank">
+                    <a href="https://shopee.ph/NIKE-AJ1-Men-Basketball-Shoes-Sneaker-High-Cut-Air-Jordan-SHOES-FOR-WOMEN-i.400638839.7782528415?sp_atk=bc7d3ef0-b896-4a57-b2f6-78e0ee08fb4d" target="_blank">
                         <div class="img-container" id="img-changer3">
                             <img src="img/p9.png" alt="" id="img-change">
                             <img src="img/arrow.png" alt="" id="arrow">
@@ -149,7 +152,7 @@
                     </div>
                 </div>
                 <div class="box box-five">
-                    <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes/id" target="_blank">
+                    <a href="https://shopee.ph/Nike-Airmax-270-Rubber-Sneakers-Shoes-for-Men-Size-i.278420509.4645725362?sp_atk=a2ca8147-5bda-41e9-8fba-f936d45844c8" target="_blank">
                         <div class="img-container" id="img-changer3">
                             <img src="img/p14.png" alt="" id="img-change">
                             <img src="img/arrow.png" alt="" id="arrow">
@@ -162,7 +165,7 @@
                     </div>
                 </div>
                 <div class="box box-six">
-                    <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes/id" target="_blank">
+                    <a href="https://shopee.ph/Dean.shops-2022-Korean-fashion-high-wedge-sneaker-shoes-for-men-6012-i.36395587.8963121855?sp_atk=c788651a-c3bb-4379-a2e6-ff7b848c180c" target="_blank">
                         <div class="img-container" id="img-changer3">
                             <img src="img/p11.png" alt="" id="img-change">
                             <img src="img/arrow.png" alt="" id="arrow">
@@ -176,6 +179,104 @@
                 </div>
             </div>
         </section>
+
+        <section class="section-three">
+            <div class="box-container">
+                <div class="box box-one">
+                    <div class="img-container">
+                        <img src="img/collection.jpg" alt="">
+                    </div>
+                    <div class="text-container">
+                        <h3>Catanauan Flagship Store <br> We also support repair your sneaker</h3>
+                    </div>
+                </div>
+                <div class="box box-two">
+                    <div class="img-container">
+                        <img src="img/collection2.jpg" alt="">
+                    </div>
+                    <div class="text-container">
+                        <h3>Lot of Brands Available <br> With a year store warranty</h3>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </section>
+
+        <footer>
+            <div class="box-container">
+                <div class="box box-one about-box">
+                    <div class="title-container about">
+                        <h4>About</h4>
+                        <div class="cross">
+                            <div class="vert"></div>
+                            <div class="hor-about"></div>
+                        </div>
+                    </div>
+                    <div class="text-container footer-text-about">
+                        <p>SHOE-TY is  sample of Sneakers Ecommerce website developed using HTML, CSS and Javascript and also a personal project by John Patrick Resurreccion.</p>
+                    </div>
+                </div>
+                <div class="box box-two address-box">
+                    <div class="title-container address-box">
+                        <h4>Address</h4>
+                        <div class="cross">
+                            <div class="vert"></div>
+                            <div class="hor-address"></div>
+                        </div>
+                    </div>
+                    <div class="text-container footer-text-address">
+                        <p>Brgy. Ajos Catanauan, Quezon. 4311 Philippines</p>
+                    </div>
+                </div>
+                <div class="box box-three contact">
+                    <div class="title-container">
+                        <h4>Contact us</h4>
+                        <div class="cross">
+                            <div class="vert"></div>
+                            <div class="hor"></div>
+                        </div>
+                    </div>
+                    <div class="text-container footer-text">
+                        <p>patrickjohn.resurreccion18@gmail.com <br>
+                        09566723445</p>
+                    </div>
+                </div>
+                <div class="box box-four info">
+                    <div class="title-container">
+                        <h4>Info</h4>
+                        <div class="cross">
+                            <div class="vert"></div>
+                            <div class="hor"></div>
+                        </div>
+                    </div>
+                    <div class="text-container footer-text">
+                        <p><a href="">Terms & Condition</a> <br> <a href="">Privacy Policy</a></p>
+                    </div>
+                </div>
+                <div class="box box-five contact">
+                    <div class="title-container">
+                        <h4>Follow me</h4>
+                        <div class="cross">
+                            <div class="vert"></div>
+                            <div class="hor"></div>
+                        </div>
+                    </div>
+                    <div class="text-container footer-text">
+                        <p><a href="">Github</a><br><a href="">Facebook</a><br><a href="">Twitter</a><br><a href="">Instagram</a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-message">
+                <form action="">
+                    <h2>Have a question?</h2>
+                    <input type="text" placeholder="Type a message">
+                    <button type="submit"><i class="far fa-paper-plane"></i></button>
+                </form>
+                <div class="outro">
+                    <h3>Created by <span>Patrick</span></h3>
+                </div>
+            </div>
+        </footer>
     </main>
 
     <script src="https://kit.fontawesome.com/a42e979eb4.js" crossorigin="anonymous"></script>
