--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <h2 id="featured" data-aos="fade-right">Our featured products</h2>
             <div class="product-container">
                 <div class="box box-one" data-aos="fade-up">
-                    <a href="https://shopee.ph/Original-women's-shoes-sneakers-women's-summer-design-thick-sole-(one-size-smaller)-i.403556620.9080428976?sp_atk=fe03619c-ad12-4080-a1c6-624610ec386a" target="_blank">
+                    <a href="https://shopee.ph/Low-cut-stitching-canvas-shoes-women's-color-matching-sports-shoes-women's-shoes-i.403556620.8775294136?sp_atk=7548e8c4-3504-4f8f-9145-b915f0971d1e&xptdk=7548e8c4-3504-4f8f-9145-b915f0971d1e" target="_blank">
                         <div class="img-container" id="img-changer3">
                             <img src="img/product2.png" alt="" id="img-change">
                             <img src="img/arrow.png" alt="" id="arrow">
@@ -110,7 +110,7 @@
                     <div class="text-container">
                         <h3>Nike Air Max</h3>
                         <p>White and asorted color edition</p>
-                        <p>P1299.00</p>
+                        <p>P712.00</p>
                     </div>
                 </div>
                 <div class="box box-two" data-aos="fade-up">
@@ -123,7 +123,7 @@
                     <div class="text-container">
                         <h3>Addidas Fashion Show</h3>
                         <p>Killer gray, orange, and white</p>
-                        <p>P1299.00</p>
+                        <p>P616.00</p>
                     </div>
                 </div>
                 <div class="box box-three" data-aos="fade-up">
@@ -136,7 +136,7 @@
                     <div class="text-container">
                         <h3>Nike Bounce Back</h3>
                         <p>Ocean black edition</p>
-                        <p>P1299.00</p>
+                        <p>P495.00</p>
                     </div>
                 </div>
                 <div class="box box-four"data-aos="fade-up">
@@ -149,7 +149,7 @@
                     <div class="text-container">
                         <h3>Nike Bounce Back</h3>
                         <p>Ocean black edition</p>
-                        <p>P1299.00</p>
+                        <p>P419.00</p>
                     </div>
                 </div>
                 <div class="box box-five" data-aos="fade-up">
@@ -162,7 +162,7 @@
                     <div class="text-container">
                         <h3>Nike Bounce Back</h3>
                         <p>Ocean black edition</p>
-                        <p>P1299.00</p>
+                        <p>P589.00</p>
                     </div>
                 </div>
                 <div class="box box-six" data-aos="fade-up">
@@ -175,7 +175,7 @@
                     <div class="text-container">
                         <h3>Nike Bounce Back</h3>
                         <p>Ocean black edition</p>
-                        <p>P1299.00</p>
+                        <p>P378.00</p>
                     </div>
                 </div>
             </div>
@@ -270,7 +270,7 @@
             <div class="footer-message">
                 <form action="">
                     <h2>Have a question?</h2>
-                    <input type="text" placeholder="Type a message">
+                    <input type="email" placeholder="Enter email">
                     <button type="submit"><i class="far fa-paper-plane"></i></button>
                 </form>
                 <div class="outro">
